@@ -50,4 +50,4 @@ gensky 9 21 12 | genskyvec -m 2 > sky09_21_12.dat
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-dctimestep(1), genBSDF(1), gensky(1), gentregvec(1), rtcontrib(1), rtrace(1)
+dctimestep(1), genBSDF(1), gensky(1), gentregvec(1), rcontrib(1), rtrace(1)
