@@ -135,4 +135,4 @@ RAYPATH		the directories to check for auxiliary files.
 .SH AUTHOR
 Greg Ward for Architectural Energy Corporation
 .SH "SEE ALSO"
-oconv(1), rpict(1), rtcontrib(1), rtrace(1)
+oconv(1), rpict(1), rcontrib(1), rtrace(1)
