@@ -670,4 +670,4 @@ option.
 Greg Ward
 .SH "SEE ALSO"
 getinfo(1), lookamb(1), oconv(1), pfilt(1), pinterp(1),
-pvalue(1), rpict(1), rtcontrib(1), rvu(1), vwrays(1), ximage(1)
+pvalue(1), rpict(1), rcontrib(1), rvu(1), vwrays(1), ximage(1)
